syntax = "proto3";

package school;

service SchoolService {
  rpc schoolStatus(SchoolByName) returns (School){}
  rpc closeSchool(CloseSchoolByName) returns (School){}
  rpc openSchool(CloseSchoolByName) returns (School){}
}

message CloseSchoolByName {
  string name = 1;
}

message OpenSchoolByName {
  string name = 1;
}

message SchoolByName {
  string name = 1;
}

message School {
  string name = 1;
  int32 status = 2;
}